2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/GroupWindow.cs: Changed the way the initial Everyone Group is
	  selected so it works for the init and when selected.

2007-05-22  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ThemeManager.cs: Changed the SelectedContactStyle to try to
	  load if it is null
	* Banter/PersonCard.cs: Changed the contactStyle to be retrieved when
	  needed so an old null copy wasn't kept around

2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Changed the hidden delete button to just allow
	  a right-click on the group button.  Still need to implement a
	  little popup menu, but for now, you can delete a group by
	  right-clicking on it.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the version to 0.1.4 for the next iteration

2007-05-18  Boyd Timothy <btimothy@gmail.com> 

	* README, NEWS: Updated for 0.1.3 release.

2007-05-18  Calvin Gaisford <calvinrg@gmail.com> 

	* data/Themes/Makefile.am: Added missing extra dist files
	* Banter/Makefile.am: Added missing Extra dist files

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Stubbed out some code for getting/setting our
	  own status in the GroupWindow.  This isn't functional yet, just a
	  start.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/PersonGroup.cs: Create a TreeStore even in the case where the
	  group is created w/o a real EDS Contact so that UpdateModel doesn't
	  blow chunks when a user creates a new group.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/GroupWindow.cs: Added code to allow the user to delete a
	  group.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* data/banter.desktop.in: Added a desktop file for the banter
	  application
	* data/Makefile.am: updated the Makefile to handle the
	  banter.application file

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/HIGMessageDialog.cs: Modified so that the ExtraWidget gets